Wed Feb 23 01:03:30 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/PortableServer/Fixed_Array_SArgument_T.h:
	* tao/PortableServer/Fixed_Array_SArgument_T.inl:
	* tao/PortableServer/Var_Array_SArgument_T.cpp:
	* tao/PortableServer/Var_Array_SArgument_T.h:
	* tao/PortableServer/Var_Array_SArgument_T.inl:
	* tao/PortableServer/Var_Size_SArgument_T.cpp:
	* tao/PortableServer/Var_Size_SArgument_T.h:
	* tao/PortableServer/Var_Size_SArgument_T.inl:

	  Fixed memory management / parameter passing issues.  Addresses
	  seg faults exhibited by TAO's Param_Test regression test.

Wed Feb 23 07:22:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Special_Basic_SArguments.h:
        * tao/PortableServer/UB_String_SArguments.h:
        * tao/PortableServer/Basic_SArgument_T.h:
        * tao/PortableServer/Special_Basic_SArgument_T.h:
        * tao/PortableServer/UB_String_SArgument_T.h:
        * tao/PortableServer/BD_String_SArgument_T.h:
          Removed trailing ; after namespace closure to fix warnings
          on Tru64

Tue Feb 22 21:58:24 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/PortableServer/BD_String_SArgument_T.cpp:

	  Corrected inline source file name in #include directive.

	* tao/PortableServer/Var_Array_SArgument_T.cpp
	  (Out_Var_Array_SArgument_T::interceptor_param):

	  Initialize the temporary "_forany" instance being inserted into
	  the Any with underlying pointer of the "_var" attribute
	  representing "out" variable array argument.  Addresses build
	  errors and warnings in a number of builds.

Tue Feb 22 20:59:18 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/PortableServer/Upcall_Wrapper.cpp:

	  Fixed compile-time errors in "no interceptor" configuration.

Tue Feb 22 20:17:45 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_operation/exceptlist_ss.cpp:

	  If no user exceptions are declared in the IDL, generate a